cmake_minimum_required(VERSION 3.22)
project(myLeetcode C)

set(CMAKE_C_STANDARD 11)


add_executable(1523 "1523. Count Odd Numbers in an Interval Range.c")
add_executable(1491 "1491. Average Salary Excluding the Minimum and Maximum Salary.c")
add_executable(0704 "0704. Binary Search.c")
add_executable(0374 "0374. Guess Number Higher or Lower.c")
add_executable(0191 "0191. Number of 1 Bits.c")
add_executable(1281 "1281. Subtract the Product and Sum of Digits of an Integer.c")
add_executable(0976 "0976. Largest Perimeter Triangle.c")